The java.lang.Character.valueOf(char c) returns a Character instance representing the specified char value. If a new Character instance is not required, this method should generally be used in preference to the constructor Character(char), as this method is likely to yield significantly better space and time performance by caching frequently requested values.
This method will always cache values in the range '\u0000' to '\u007F',
inclusive, and may cache other values outside of this range.